# Python-FastAPI

./: README-TEMPLATE.md  test_Pytest.py
ConcAsynPython/async/: as1.py  as2.py  as3.py  as_aiofiles.py  as_aiohttp.py  cor1.py  cor2.py  generator1.py  python_assync.py
ConcAsynPython/cython/: computa.pyx  cumprimenta.pyx  programa2.py  setup.py
ConcAsynPython/fastapi/: main.py
ConcAsynPython/processos/: abs_v1.py  abs_v2.py  com1.py  com2.py  estados_processos_v1.py  estados_processos_v2.py  pool_python_v1.py  pool_python_v2.py  processo.py  python_multiprocessos.py  sinc_processos_v1.py  (+1 more)
FAMP/: pyproject.toml
FAMP/secao02/: main.py
FAMP/secao03_p1/: main.py  models.py
FAMP/secao03_p2/: main.py
FAMP/secao03_p2/routes/: curso_router.py  usuario_router.py
FAMP/secao04/: criar_tabelas.py  main.py
FAMP/secao04/api/v1/: api.py
FAMP/secao04/api/v1/endpoints/: curso.py
FAMP/secao04/core/: configs.py
FAMP/secao04/models/: curso_model.py
FAMP/secao04/schemas/: curso_schema.py
FAMP/secao05/: criar_tabelas.py  main.py
FAMP/secao05/api/v1/: api.py
FAMP/secao05/api/v1/endpoints/: curso.py
FAMP/secao05/core/: configs.py  deps.py
FAMP/secao06/: criar_tabelas.py  main.py
FAMP/secao06/api/v1/: api.py
FAMP/secao06/api/v1/endpoints/: artigo.py  usuario.py
FAMP/secao06/core/: auth.py  configs.py  database.py  deps.py  security.py
FAMP/secao06/models/: __all_models.py  artigo_model.py  usuario_model.py
FAMP/secao06/schemas/: artigo_schema.py  usuario_schema.py
pybitcoin/: Pipfile  main.py
pystudents/: Pipfile  __init__.py  requirements.txt
(+19 files in other folders)
