[tool.poetry]
name = "famp"
version = "0.1.0"
description = "Projects Python Sample"
authors = ["David Alexandre Fernandes"]
license = "MIT"

[tool.poetry.dependencies]
python = "ˆ3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
